# solobandultra

./: .gitignore  Dockerfile.build  README.md  build-rust.sh
.github/workflows/: build-and-release.yml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
ios/SoloBandUltra/: Assets.xcassets
ios/SoloBandUltra/SoloBandUltra/: AudioSessionManager.swift  AuthManager.swift  ContentView.swift  Info.plist  MidiSettings.swift  PlaybackManager.swift  ScoreLibBridge.swift  SheetMusicView.swift  SoloBandUltra-Bridging-Header.h  SoloBandUltraApp.swift  kinde-auth.json
ios/SoloBandUltra/SoloBandUltra.xcodeproj/: project.pbxproj
ios/SoloBandUltra/SoloBandUltra.xcodeproj/xcshareddata/xcschemes/: SoloBandUltra.xcscheme
ios/SoloBandUltra/SoloBandUltra/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/SoloBandUltra/SoloBandUltra/Assets.xcassets/AppIconImage.imageset/: Contents.json
ios/SoloBandUltra/SoloBandUltra/SheetMusic/: 童年.mxl
ios/SoloBandUltra/include/: scorelib.h
ios/SoloBandUltra/lib/libscorelib.xcframework/: Info.plist
rust/scorelib/: Cargo.toml
rust/scorelib/src/: accompaniment.rs  android.rs  lib.rs  midi.rs  model.rs  mxl.rs  parser.rs  playback.rs  renderer.rs  timemap.rs  unroller.rs
rust/scorelib/src/renderer/: beat_map.rs  constants.rs  glyphs.rs  layout.rs  lyrics.rs  mod.rs  notes.rs  slurs.rs  staff.rs  svg_builder.rs
rust/scorelib/tests/: midi_tests.rs  parse_samples.rs  playback_tests.rs  render_samples.rs
sheetmusic/: 童年.mxl
(+14 files in other folders)
